--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -10,17 +10,17 @@ bibliography: references.bib
 
 ### [**Introduction**]{.underline}
 
-*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to heterospecific songs or no songs[@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at what factors can influence singing ability, more specifically, the affects of nutrition on male individuals.
+*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow wok to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to heterospecific songs or no songs[@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, more specifically, the affects of nutrition on male individuals.
 
-I hypothesise that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
+I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
 
 ### [**Analysis**]{.underline}
 
-Using the dataset provided,
+The dataset used contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size.
 
 When investigating the minimum and maximum data points, a negative value for song duration became apparent. Believing this to be a typing error, I used the absolute values for song duration so as to avoid any impossible values. Only this variable was altered in such a way, as negative values are valid for other variables such as weight change.
 
-For some exploration and visualisations, the data was sorted into groups of Low (≤36%), Medium(=48%), and High(≥60%) nutrition diets. This allowed for better comparisons between the upper and lower groups as a whole by simplifying the number of dietary categories.
+For some exploration and visualizations, the data was sorted into groups of Low (≤36%), Medium(=48%), and High(≥60%) nutrition diets. This allowed for better comparisons between the upper and lower groups as a whole by simplifying the number of dietary categories.
 
 Finding an appropriate linear model for this data set required testing out multiple iterations. The response variable in this model is song duration, looking at diet category, weight change, and size as possible explanatory variables. Initial exploratory plots illustrated that both size and diet may have an effect on weight change, so these interactions were taken into account in the model. An F-test showed that there was a significant interaction between weight change and diet category (ANOVA *F* = 1.7229, *P* = 0.17955), as well as weight change and size (ANOVA *F* = 5.1010, *P* = 0.02432) so these interaction terms were kept in the model.
 
@@ -60,7 +60,7 @@ This is significant as a male cricket's ability to sing for a greater duration t
 
 Males of a species competing against each other for the opportunity to mate with a female is a common occurrence in nature [@cox1977]. These competitions can manifest as direct antagonism where males get into a physical conflict. Such is the case with red deer, as growing larger antlers to fight with correlates to a greater level of reproductive success [@kruuk2002]. The other way that males can outshine their peers is through courtship displays which are aimed to impress the females, as is true of the singing behaviour found in *Gryllodes sigillatus*. Another well-known example of this includes male birds such as peacocks sporting a large ornamental plumage. In the wild, this colourful addition could be seen as a counter-intuitive for survival, making it more difficult to hide from and escape predators [@burk1982]. The same could be said for the cricket - producing a loud acoustic for an extended time could alert predators to the individual's location. However, this is exactly why it is so attractive to females of the species - If an individual can survive despite their handicap they must be of good fitness, a quality that females will want to pass on to their offspring [@andersson1986].
 
-##### FINAL CONCLUSIONS
+##### **FINAL CONCLUSIONS**
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/triple_gradient_april23.png")
