adding citations for the packages used

--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -102,3 +102,35 @@ url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
 	url = {http://dx.doi.org/10.1002/mmnz.19900660108},
 	langid = {en}
 }
+
+@article{colorBlindness,
+	title = {colorBlindness: Safe Color Set for Color Blindness},
+	author = {Ou, Jianhong},
+	year = {2021},
+	date = {2021}
+}
+
+@article{tidyverse,
+	title = {Welcome to the {\textbraceleft}tidyverse{\textbraceright}},
+	author = {Wickham, Hadley and Averick, Mara and Bryan, Jennifer and Chang, Winston and McGowan, {Lucy D'Agostino} and {François}, Romain and Grolemund, Garrett and Hayes, Alex and Henry, Lionel and Hester, Jim and Kuhn, Max and Pedersen, Thomas Lin and Miller, Evan and Bache, Stephan Milton and {Müller}, Kirill and Ooms, Jeroen and Robinson, David and Seidel, Dana Paige and Spinu, Vitalie and Takahashi, Kohske and Vaughan, Davis and Wilke, Claus and Woo, Kara and Yutani, Hiroaki},
+	year = {2019},
+	date = {2019},
+	pages = {1686},
+	volume = {4},
+	doi = {10.21105/joss.01686}
+}
+
+@article{rstatix,
+	title = {rstatix: Pipe-Friendly Framework for Basic Statistical Tests},
+	author = {Kassambara, Alboukadel},
+	year = {2021},
+	date = {2021},
+	url = {https://rpkgs.datanovia.com/rstatix/}
+}
+
+@article{patchwork,
+	title = {patchwork: The Composer of Plots},
+	author = {Pedersen, Thomas Lin},
+	year = {2022},
+	date = {2022}
+}
