--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -12,11 +12,11 @@ bibliography: references.bib
 
 *Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow wok to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to heterospecific songs or no songs[@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, more specifically, the affects of nutrition on male individuals.
 
-I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
+The data-set used contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
 
 ### [**Analysis**]{.underline}
 
-The dataset used contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size.
+The following packages were used during the data analysis and visualisation process: tidyverse [@tidyverse], colorBlindness [@colorBlindness], rstatix [@rstatix], and patchwork [@patchwork].
 
 When investigating the minimum and maximum data points, a negative value for song duration became apparent. Believing this to be a typing error, I used the absolute values for song duration so as to avoid any impossible values. Only this variable was altered in such a way, as negative values are valid for other variables such as weight change.
 
