--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -87,6 +87,15 @@ doi = {10.10520/EJC17961},
 url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
 	langid = {en}
   }
+  
+  @Manual{R,
+    title = {R: A Language and Environment for Statistical Computing},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2023},
+    url = {https://www.R-project.org/},
+  }
 
 @article{subramaniam1990,
 	title = {Mating Behaviour and Spermatophore Transfer in {\emph{Gryllodes sigillatus}}
@@ -131,6 +140,31 @@ url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
 @article{patchwork,
 	title = {patchwork: The Composer of Plots},
 	author = {Pedersen, Thomas Lin},
+	year = {2022},
+	date = {2022}
+}
+
+@article{performance,
+	title = {{\textbraceleft}performance{\textbraceright}: An {\textbraceleft}R{\textbraceright} Package for Assessment, Comparison and Testing of Statistical Models},
+	author = {{Lüdecke}, Daniel and Ben-Shachar, Mattan S. and Patil, Indrajeet and Waggoner, Philip and Makowski, Dominique},
+	year = {2021},
+	date = {2021},
+	pages = {3139},
+	volume = {6},
+	doi = {10.21105/joss.03139}
+}
+
+@article{MASS,
+	title = {Modern Applied Statistics with S},
+	author = {Venables, W. N. and Ripley, B. D.},
+	year = {2002},
+	date = {2002},
+	url = {https://www.stats.ox.ac.uk/pub/MASS4/}
+}
+
+@article{broom,
+	title = {broom: Convert Statistical Objects into Tidy Tibbles},
+	author = {Robinson, David and Hayes, Alex and Couch, Simon},
 	year = {2022},
 	date = {2022}
 }
