--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -10,9 +10,9 @@ bibliography: references.bib
 
 ### [**Introduction**]{.underline}
 
-*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow wok to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, more specifically, the affects of nutrition on male individuals.
+*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow work to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates. Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, more specifically, the affects of nutrition on male individuals.
 
-The data-set used contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
+The data-set used to investigate these influences contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
 
 ### [**Analysis**]{.underline}
 
@@ -22,15 +22,17 @@ When investigating the minimum and maximum data points, a negative value for son
 
 For some exploration and visualizations, the data was sorted into groups of Low (≤36%), Medium(=48%), and High(≥60%) nutrition diets. This allowed for better comparisons between the upper and lower groups as a whole by simplifying the number of dietary categories.
 
-I used an ordinary least squares linear model to analyse song duration, looking at diet and weight change as possible explanatory variables. Interaction terms were removed as they were shown not to have an impact: The terms set out relationships between weight change and diet (ANOVA *F*~1,533~ =1.7576, *P=* 0.1855) as well as weight change and size (ANOVA *F*~1,533~ =5.3477, *P=* 0.0211). A further term was removed, as the variable describing size was seen to be unnecessary (ANOVA *F*~1,535~ =2.3698, *P=* 0.1243). The data remained in its original form in the model, as a log transformation was found to make a worse-fitting model.
+I used an ordinary least squares linear model to analyse song duration, looking at diet and weight change as possible explanatory variables. Interaction terms were removed as they were shown not to have an impact: The removed terms set out relationships between weight change and diet (*F*~1,533~ =1.7576, *P=* 0.1855) as well as weight change and size (*F*~1,533~ =5.3477, *P=* 0.0211). A further term was removed, as the variable describing size was seen to be unnecessary (ANOVA *F*~1,535~ =2.3698, *P=* 0.1243). The data remained in its original form in the model, as a log transformation was found to make a worse-fitting model. The purpose of this model is to test the hypothesis that greater nutrition leads to an increased duration of singing.
+
+A secondary ordinary least squares linear model was created to assess the weight change of crickets with the nutritional percentage of their diet as a categorical predictor. This was done in order to address the hypothesis that diet has an impact on weight change.
 
 ### [**Results & Discussion**]{.underline}
 
 ##### **DIET AND WEIGHT CHANGE**
 
-I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared the weight gain of crickets in the groups of Low, Medium, and High nutrition using the linear model described previously.
+I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared weight change to differing percentages of dietary nutrition using an ordinary least squares linear model where nutritional percentages from 12-84% increasing in increments of 12 were used as a predictor variable for weight change in grams over the course of a week. The changes in weight ranged from a loss of 0.0578 to a gain of 0.0868, and it was found that for each 12% increase in nutrition, a cricket will gain 0.0048 grams. This confirms the hypothesis and is consistent with established knowledge on diet and nutrition.
 
-stats results......
+REF
 
 ```{r, echo=FALSE}
 knitr::include_graphics("../Graphs/dw_means_april23.png")
