--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -168,3 +168,18 @@ url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
 	year = {2022},
 	date = {2022}
 }
+
+@article{kiflawi2000,
+	title = {Size{\textendash}dependent response to conspecific mating calls by male crickets},
+	author = {Kiflawi, Moshe and Gray, David A.},
+	year = {2000},
+	month = {11},
+	date = {2000-11-07},
+	journal = {Proceedings of the Royal Society of London. Series B: Biological Sciences},
+	pages = {2157--2161},
+	volume = {267},
+	number = {1458},
+	doi = {10.1098/rspb.2000.1263},
+	url = {http://dx.doi.org/10.1098/rspb.2000.1263},
+	langid = {en}
+}
