adding stats values to results section (CI, T values etc)

--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -26,7 +26,7 @@ A secondary ordinary least squares linear model was created to assess the weight
 
 ##### **DIET AND WEIGHT CHANGE**
 
-I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared weight change to differing percentages of dietary nutrition using an ordinary least squares linear model where nutritional percentages from 12-84% increasing in increments of 12 were used as a predictor variable for weight change in grams over the course of a week. The changes in weight ranged from a loss of 0.0578g to a gain of 0.0868g, and it was found that for each 12% increase in nutrition, a cricket will gain 0.0048 grams. This confirms the hypothesis and is consistent with established knowledge on diet and nutrition.
+I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared weight change to differing percentages of dietary nutrition using an ordinary least squares linear model where nutritional percentages from 12-84% increasing in increments of 12 were used as a predictor variable for weight change in grams over the course of a week. The changes in weight ranged from a loss of 0.0578g to a gain of 0.0868g, and it was found that a cricket will gain 0.00596 grams [95% CI; 0.00553-0.00639] for each 12% increase in nutrition (Linear Model: *T*~1,537~ =13.9, *P*\<0.001). This confirms the hypothesis and is consistent with established knowledge on diet and nutrition.
 
 REF and STATS
 
@@ -39,7 +39,7 @@ knitr::include_graphics("../Graphs/dw_means_april23.png")
 
 ##### **DIET AND SONG DURATION**
 
-Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration due to an increased amount of resources to allocate to the costly action. To test this, I used an ordinary least squares linear model to compare song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 (95% CI: ) seconds longer, meaning for each 12% incremental increase song duration was extended by 0.37 seconds. Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
+Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration due to an increased amount of resources to allocate to the costly action. To test this, I used an ordinary least squares linear model to compare song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 seconds longer [95% CI; 0.025-0.037], meaning for each 12% incremental increase song duration was extended by 0.37 seconds (Linear Model: *T*~1,536~ =5.26, *P*\<0.001) . Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
 
 This is consistent with previous knowledge, as acoustic production in crickets is a highly energetic process, which would require an abundance of resources derived from diet.
 
