--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -4,21 +4,19 @@ bibliography: references.bib
 
 ## **Exploring the influence of nutrition on the duration of singing in *Gryllodes sigillatus,* the decorated cricket - does diet quality affect sexual signalling?**
 
-**ABSTRACT:** The male decorated cricket uses a calling song to attract females. This study looks at the influence of nutrition and weight on the length of this sexual signalling displayed by individuals. It was found that crickets with a higher percentage of nutrition in their diets had both a greater weight increase and a greater song duration. This implies that nutrition is an important factor in a cricket's reproductive ability, possibly because the individuals with a better diet have more resources to allocate towards sexual signalling.
-
 ### [**Introduction**]{.underline}
 
-*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. In fact, the song produced can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours; actions such as isolating the mated female in a burrow work to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their own species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates.
+*Gryllodes sigillatus* is a species of cricket known by many names including decorated, banded, and tropical house cricket; males of the species use a calling song to attract a female mate. The signalling song produced by males is facilitated by the orthopteran insect's forewings and antennae and works via the principles of sexual signalling to attract a female mate [@subramaniam1990]. It has been found that the duration of the song produced is influential, with females being drawn to and preferring to mate with individuals that can produce a longer song [@kiflawi2000]. In fact, the song can be so alluring to the female that, if other crickets' songs can be heard nearby, a male cricket will increasingly engage in mate guarding behaviours - actions such as isolating the mated female in a burrow work to ensure paternity by preventing the female from mating multiple times [@bateman1999]. Not only does a male's song work to attract females and dissuade possible rival males, but female *Gryllodes sigillatus* crickets exposed to the acoustic displays of their own species reach their full mass quicker than females exposed to either heterospecific songs from different species or no songs at all [@bateman2005]. This would mean that the females are able to reach sexual maturity quicker when in the presence of viable mates.
 
-Due to the importance that sexual signalling has on a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, more specifically, the affects of nutrition on male individuals. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
+Due to the importance of sexual signalling displays for a cricket's ability to reproduce, this paper aims to look at factors that can influence singing ability, more specifically, the affects of nutrition on male individuals. I hypothesize that males with a more nutritious diet will have a greater increase in weight. As a result of this, I also predict that individuals will sing for a greater duration if their diet has a greater nutritional percentage, as more resources can be allocated to the costly signalling act.
 
 ### [**Analysis**]{.underline}
 
 The data-set used to investigate the hypotheses detailed above contains information collected over the course of a week pertaining to male crickets' nutrition, song duration, weight change, and size. R version 4.2.3 [@R] was used to analyse the data and investigate which of the recorded factors influence song duration.
 
-When investigating the minimum and maximum data points, a negative value for song duration became apparent. Believing this to be a typing error, I used the absolute values for song duration so as to avoid any impossible values. Only this variable was altered in such a way, as negative values are valid for other variables such as weight change.
+When investigating the minimum and maximum data points, a negative value for song duration became apparent. Believing this to be a typing error, the absolute values were used for song duration so as to avoid any impossible values. Only this variable was altered in such a way, as negative values are valid for other variables such as weight change.
 
-I used an ordinary least squares linear model to analyse song duration, looking at diet and weight change as possible explanatory variables. Interaction terms were removed as they were shown not to have an impact: The removed terms set out relationships between weight change and diet (*F*~1,533~ =1.7576, *P=* 0.1855) as well as weight change and size (*F*~1,533~ =5.3477, *P=* 0.0211). A further term was removed, as the variable describing size was seen to be unnecessary (ANOVA *F*~1,535~ =2.3698, *P=* 0.1243). The data remained in its original form in the model, as a log transformation was found to make a worse-fitting model. The purpose of this model is to test the hypothesis that greater nutrition leads to an increased duration of singing.
+I used an ordinary least squares linear model to analyse song duration, looking at diet and weight change as possible explanatory variables. Interaction terms were removed as they were shown not to have an impact: The removed terms set out relationships between weight change and diet (*F*~1,533~ =1.7576, *P=* 0.1855) as well as weight change and size (*F*~1,533~ =5.3477, *P=* 0.0211). A further term was removed, as the variable describing size was seen to be unnecessary (*F*~1,535~ =2.3698, *P=* 0.1243). The data remained in its original form in the model, as a log transformation was found to make a worse-fitting model. The purpose of this model is to test the hypothesis that greater nutrition leads to an increased duration of singing.
 
 A secondary ordinary least squares linear model was created to assess the weight change of crickets with the nutritional percentage of their diet as a categorical predictor. This was done in order to address the hypothesis that diet has an impact on weight change.
 
@@ -26,7 +24,7 @@ A secondary ordinary least squares linear model was created to assess the weight
 
 ##### **DIET AND WEIGHT CHANGE**
 
-I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared weight change to differing percentages of dietary nutrition using an ordinary least squares linear model where nutritional percentages from 12-84% increasing in increments of 12 were used as a predictor variable for weight change in grams over the course of a week. The changes in weight ranged from a loss of 0.0578g to a gain of 0.0868g, and it was found that a cricket will gain 0.00596 grams [95% CI; 0.00553-0.00639] for each 12% increase in nutrition (Linear Model: *T*~1,537~ =13.9, *P*\<0.001). This confirms the hypothesis and is consistent with established knowledge on diet and nutrition.
+I hypothesized that the greater the nutritional percentage of a cricket's diet, the more weight it would gain over the course of the observational period (1 week). To test this, I compared weight change to differing percentages of dietary nutrition using an ordinary least squares linear model where nutritional percentages from 12-84% increasing in increments of 12 were used as a predictor variable for weight change in grams over the course of a week. The changes in weight ranged from a loss of 0.0578g to a gain of 0.0868g, and it was found that a cricket gained 0.00596 grams [95% CI; 0.00553-0.00639] for each 12% increase in nutrition (Linear Model: *T*~1,537~ =13.9, *P*\<0.001). This confirms the hypothesis and is consistent with established knowledge on diet and nutrition.
 
 REF and STATS
 
@@ -39,7 +37,7 @@ knitr::include_graphics("../Graphs/dw_means_april23.png")
 
 ##### **DIET AND SONG DURATION**
 
-Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration due to an increased amount of resources to allocate to the costly action. To test this, I used an ordinary least squares linear model to compare song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 seconds longer [95% CI; 0.025-0.037], meaning for each 12% incremental increase song duration was extended by 0.37 seconds (Linear Model: *T*~1,536~ =5.26, *P*\<0.001) . Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
+Based on the results above which illustrated a greater weight gain in crickets with a better diet, I further hypothesized that the group with higher nutrition would also have a greater song duration, likely due to an increased amount of resources to allocate to the costly action. To test this, I used an ordinary least squares linear model to compare song duration of crickets consuming diets of differing nutritional percentages, with diet as a predictor variable for total song duration in seconds over a week of observation. This showed that for each percentage increase in nutrition, the cricket sang for 0.031 seconds longer [95% CI; 0.025-0.037], meaning for each 12% incremental increase in dietary nutrition, song duration was extended by 0.37 seconds (Linear Model: *T*~1,536~ =5.26, *P*\<0.001) . Illustrated in Fig. 2, the mean song duration for those with a low nutritional intake (≤36% ) is 4.513 seconds, rising to an average of 7.393 for crickets with a high nutritional intake (≥60%).
 
 This is consistent with previous knowledge, as acoustic production in crickets is a highly energetic process, which would require an abundance of resources derived from diet.
 
@@ -61,9 +59,9 @@ knitr::include_graphics("../Graphs/triple_gradient_april23.png")
 
 ```
 
-Fig.3 - The song duration in seconds of male decorated crickets (n=481) in regards to the nutritional percentage of their diet and their change in weight in grams over 1 week. The colour of each point corresponds to the percentage of nutrition in the cricket's diet from 12-84%, on a scale where red=low and green=high.
+Fig.3 - The total song duration in seconds produced over 1 week by male decorated crickets (n=481) in regards to their change in weight (g) and the nutritional percentage of their diet. The colour of each point corresponds to the percentage of nutrition in the cricket's diet from 12-84%, on a scale where red=low and green=high.
 
-Due to the reproductive repercussions of song duration, the factors that allow a cricket to sing for longer are highly significant to their fitness and the proliferation of their genes. Subsequently, maintaining a nutritious diet is important for the success of male crickets as it not only facilitates weight gain, but also corresponds to an increased song length, likely due to an increased availabilty of energy to expend. Both of these results increase a male cricket's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to the acoustic displays, they prefer the songs of bigger individuals [@kiflawi2000]. As found in this investigation, bigger crickets produce a longer song on average, so it can be inferred that the song duration is what indicates to the female a male's size and therefore fitness.
+Due to the reproductive repercussions of song duration, the factors that allow a cricket to sing for longer are highly significant to their fitness and the proliferation of their genes. Subsequently, maintaining a nutritious diet is important for the success of male crickets as it not only facilitates weight gain, but also corresponds to an increased song length, likely due to an increased availability of energy to expend. Both of these results increase a male cricket's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to longer acoustic displays, they prefer the songs of bigger individuals [@kiflawi2000]. As found in this investigation, bigger crickets produce a longer song on average, so it can be inferred that song duration is what indicates to the female a male's size and therefore fitness.
 
 ### [**References**]{.underline}
 
