--- a/Scripts/references.bib
+++ b/Scripts/references.bib
@@ -183,3 +183,17 @@ url = {https://journals.co.za/doi/abs/10.10520/EJC17961},
 	url = {http://dx.doi.org/10.1098/rspb.2000.1263},
 	langid = {en}
 }
+
+@article{jr.1982,
+	title = {Insect Nutrition: An Adaptationist's Perspective},
+	author = {Slansky Jr., Frank},
+	year = {1982},
+	month = {03},
+	date = {1982-03},
+	journal = {The Florida Entomologist},
+	pages = {45},
+	volume = {65},
+	number = {1},
+	doi = {10.2307/3494145},
+	url = {http://dx.doi.org/10.2307/3494145}
+}
