adding to the conclusion

--- a/Scripts/Report.Rmd
+++ b/Scripts/Report.Rmd
@@ -59,7 +59,9 @@ knitr::include_graphics("../Graphs/triple_gradient_april23.png")
 
 Fig.3 - The total song duration in seconds produced over 1 week by male decorated crickets (n=481) in regards to their change in weight (g) and the nutritional percentage of their diet. The colour of each point corresponds to the percentage of nutrition in the cricket's diet from 12-84%, on a scale where red=low and green=high.
 
-Due to the reproductive repercussions of song duration, the factors that allow a cricket to sing for longer are highly significant to their fitness and the proliferation of their genes. Subsequently, maintaining a nutritious diet is important for the success of male crickets as it not only facilitates weight gain, but also corresponds to an increased song length, likely due to an increased availability of energy to expend. Both of these results increase a male cricket's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to longer acoustic displays, they prefer the songs of bigger individuals [@kiflawi2000]. As found in this investigation, bigger crickets produce a longer song on average, so it can be inferred that song duration is what indicates to the female a male's size and therefore fitness.
+Due to the reproductive repercussions of song duration, the factors that allow a cricket to sing for longer are highly significant to their fitness and the proliferation of their genes. Subsequently, maintaining a nutritious diet is important for the success of male crickets as it not only facilitates weight gain, but also corresponds to an increased song length, likely due to an increased availability of energy to expend. Both of these results increase a male cricket's chance of winning over a mate, as not only are female *Gryllodes sigillatus* attracted to longer acoustic displays, they prefer the songs of bigger individuals [@kiflawi2000]. Whilst this was found to be true in regards to weight in this data, wherein crickets gaining more mass generally produced a longer song, it was seen that size in terms of a cricket's length did not have a significant influence over song duration which may require further investigation.
+
+In this investigation, it was found that crickets with a greater level of nutrition in their diet will become larger in terms of mass and also produce a longer song on average. It can be inferred from this that song duration is what indicates to the female a male's fitness, and therefore a longer song will increase an individual's chances of attracting a mate. In this way, nutrition has an influence over the reproductive success of male *Gryllodes sigillatus* , most probably due to an increased availability of resources available for complex behaviours once basic energetic needs are met*.*
 
 ### [**References**]{.underline}
 
